Add support for generating a firware from an erlang application
 * Integrated the handling of Vagrante VM in the script themselves
 * Added parameters to force the use of a VM even on Linux
 * Added parameters helpful during development
 * Added sample application with NIF for testing firmwares.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *.log
-.vagrant
+.vagrant*
 artefacts
 _cache
 _build
+samples/hello_grisp/c_src/*.o
+samples/hello_grisp/priv
+samples/hello_grisp/rebar.lock
