--- a/system_grisp2/fwup.conf
+++ b/system_grisp2/fwup.conf
@@ -12,12 +12,13 @@ require-fwup-version="1.0.0"
 #  Use 'fw_printenv' to query values on the target.
 #
 # These are used by Grisp libraries to introspect.
-define(GRISP_FW_PRODUCT, "Grisp Firmware")
+define(GRISP_FW_PRODUCT, "Grisp 2 Firmware")
 define(GRISP_FW_DESCRIPTION, "")
-define(GRISP_FW_VERSION, "${GLB_VERSION}")
+define(GRISP_FW_VERSION, "")
 define(GRISP_FW_PLATFORM, "grisp2")
-define(GRISP_FW_ARCHITECTURE, "arm")
-define(GRISP_FW_AUTHOR, "The Grisp Team")
+define(GRISP_FW_ARCHITECTURE, "arm-unknown-linux-gnueabihf")
+define(GRISP_FW_AUTHOR, "Peer Stritzinger GmbH")
+define(GRISP_FW_VCS_IDENTIFIER, "")
 
 define(GRISP_FW_DEVPATH, "/dev/mmcblk0")
 define(GRISP_FW_APPLICATION_PART0_DEVPATH, "/dev/mmcblk0p4") # Linux part number is 1-based
@@ -39,7 +40,7 @@ define(ROOTFS, "${GRISP_TARGET_SYSTEM}/images/rootfs.squashfs")
 # | BareBox State @ offset ?   |
 # +----------------------------+
 # | p0: Boot partition (FAT32) |
-# | zImage                     |
+# | zImage.a                   |
 # +----------------------------+
 # | p1: Rootfs A (squashfs)    |
 # +----------------------------+
@@ -77,6 +78,9 @@ meta-misc = ${GRISP_FW_MISC}
 # File resources are listed in the order that they are included in the .fw file
 # This is important, since this is the order that they're written on a firmware
 # update due to the event driven nature of the update system.
+file-resource boot.conf {
+    host-path = "${GRISP_SYSTEM}/images/fwup_include/boot.conf"
+}
 file-resource zImage {
     host-path = "${GRISP_SYSTEM}/images/zImage"
 }
@@ -126,9 +130,15 @@ task complete {
 
         fat_mkfs(${BOOT_PART_OFFSET}, ${BOOT_PART_COUNT})
         fat_setlabel(${BOOT_PART_OFFSET}, "BOOT")
+        fat_mkdir(${BOOT_PART_OFFSET}, "loader")
+        fat_mkdir(${BOOT_PART_OFFSET}, "loader/entries")
     }
 
-    on-resource zImage { fat_write(${BOOT_PART_OFFSET}, "zImage") }
+    on-resource boot.conf {
+        fat_write(${BOOT_PART_OFFSET}, "loader/entries/boot.conf")
+    }
+
+    on-resource zImage { fat_write(${BOOT_PART_OFFSET}, "zImage.a") }
 
     on-resource oftree { fat_write(${BOOT_PART_OFFSET}, "oftree") }
 
