--- a/system_grisp2/rootfs_overlay/etc/erlinit.config
+++ b/system_grisp2/rootfs_overlay/etc/erlinit.config
@@ -3,8 +3,8 @@
 # Turn on the debug prints
 #-v
 
-# Specify where erlinit should send the IEx prompt. Only one may be enabled at
-# a time.
+# Specify where erlinit should send the Erlang prompt. Only one may be enabled
+# at a time.
 -c ttymxc0   # Debug UART connector
 #-c ttymxc4   # UART connector on main board
 
@@ -42,9 +42,9 @@
 # Mount the application partition (run "man fstab" for field names)
 # NOTE: This must match the location in the fwup.conf. If it doesn't the system
 #       will probably still work fine, but you won't get shell history since
-#       shoehorn/nerves_runtime can't mount the application filesystem before
+#       grisp_runtime can't mount the application filesystem before
 #       the history is loaded. If this mount fails due to corruption, etc.,
-#       nerves_runtime will auto-format it. Your applications will need to handle
+#       grisp_runtime will auto-format it. Your applications will need to handle
 #       initializing any expected files and folders.
 -m /dev/mmcblk0p1:/mnt/boot:vfat:ro,nodev,noexec,nosuid:
 -m /dev/mmcblk0p4:/root:f2fs:nodev:
@@ -53,12 +53,7 @@
 # Erlang release search path
 -r /srv/erlang
 
-# Assign a hostname of the form "nerves-<serial_number>".
+# Assign a hostname of the form "grisp-<serial_number>".
 # See /etc/boardid.config for locating the serial number.
 -d /usr/bin/boardid
--n nerves-%s
-
-# If using shoehorn (https://github.com/nerves-project/shoehorn), start the
-# shoehorn OTP release up first. If shoehorn isn't around, erlinit fails back
-# to the main OTP release.
---boot shoehorn
+-n grisp-%s
