Try fixing resolv.conf not being a link in the firmware

--- a/system_common/board/grisp-common/busybox.config
+++ b/system_common/board/grisp-common/busybox.config
@@ -270,7 +270,7 @@ CONFIG_FEATURE_MD5_SHA1_SUM_CHECK=y
 CONFIG_MKDIR=y
 # CONFIG_MKFIFO is not set
 CONFIG_MKNOD=y
-# CONFIG_MKTEMP is not set
+CONFIG_MKTEMP=y
 CONFIG_MV=y
 # CONFIG_NICE is not set
 # CONFIG_NL is not set
@@ -922,11 +922,11 @@ CONFIG_NTPD=y
 # CONFIG_FEATURE_NTPD_SERVER is not set
 CONFIG_FEATURE_NTPD_CONF=y
 CONFIG_FEATURE_NTP_AUTH=y
-# CONFIG_PING is not set
+CONFIG_PING=y
 # CONFIG_PING6 is not set
 # CONFIG_FEATURE_FANCY_PING is not set
 # CONFIG_PSCAN is not set
-# CONFIG_ROUTE is not set
+CONFIG_ROUTE=y
 # CONFIG_SLATTACH is not set
 # CONFIG_SSL_CLIENT is not set
 # CONFIG_TC is not set
