--- a/samples/hello_grisp/rebar.config
+++ b/samples/hello_grisp/rebar.config
@@ -17,7 +17,8 @@
 
 {relx, [
 	{release, {hello_grisp, "0.0.1"}, [
-		hello_grisp
+		hello_grisp,
+		inets
 	]},
 	{sys_config, "./config/sys.config"},
 	{vm_args, "./config/vm.args"},
