Fix cross-compiled release having wrong erlang binaries
 * Downgraded rebar3 to version 3.13.2
 * Fixed firmware build script to pass the target erlang directory
 * Added suport for vmware to vagrant

--- a/samples/hello_grisp/rebar.config
+++ b/samples/hello_grisp/rebar.config
@@ -18,7 +18,8 @@
 {relx, [
 	{release, {hello_grisp, "0.0.1"}, [
 		hello_grisp,
-		inets
+		inets,
+		crypto
 	]},
 	{sys_config, "./config/sys.config"},
 	{vm_args, "./config/vm.args"},
