--- a/system_common/Config.in
+++ b/system_common/Config.in
@@ -22,6 +22,7 @@ source "$BR2_EXTERNAL_GRISP_PATH/package/nbtty/Config.in"
 source "$BR2_EXTERNAL_GRISP_PATH/package/grisp-config/Config.in"
 source "$BR2_EXTERNAL_GRISP_PATH/package/ply/Config.in"
 source "$BR2_EXTERNAL_GRISP_PATH/package/erlang-rebar3/Config.in"
+source "$BR2_EXTERNAL_GRISP_PATH/package/cryptoauthlib/Config.in"
 
 # Load user options
 menu "User-provided options"
