Add dummy update target to firmware

--- a/system_grisp2/fwup.conf
+++ b/system_grisp2/fwup.conf
@@ -160,3 +160,23 @@ task complete {
         raw_memset(${APP_PART_OFFSET}, 256, 0xff)
     }
 }
+
+# This firmware task always upgrade the A partition.
+# A/B software upgrade is not yet supported.
+task upgrade {
+    on-init {
+        info("Upgrading partition A")
+
+        # Indicate that the entire partition can be cleared
+        trim(${ROOTFS_A_PART_OFFSET}, ${ROOTFS_A_PART_COUNT})
+    }
+
+    on-resource zImage { fat_write(${BOOT_PART_OFFSET}, "zImage.a") }
+    on-resource rootfs.img { raw_write(${ROOTFS_A_PART_OFFSET}) }
+
+    on-finish {
+    }
+
+    on-error {
+    }
+}
