Add some I2C tooling and fix I2C config

--- a/system_common/package/cryptoauthlib/files/0.conf
+++ b/system_common/package/cryptoauthlib/files/0.conf
@@ -7,7 +7,7 @@
 # hid,i2c,<address>
 # i2c,<address>,<bus>
 # spi,<select_line>,<baud>
-interface = i2c,0x60,1
+interface = i2c,0xC0,0
 
 # Slot 0 is the private key
 # URL: pkcs11:type=private
