--- a/system_grisp2/linux/imx6ull-grisp2.dts
+++ b/system_grisp2/linux/imx6ull-grisp2.dts
@@ -25,72 +25,64 @@
 #endif /* GRISP_IMX6ULL_Y0 */
 	};
 
-	state: state {
-		magic = <0x4d433230>;
+	state: imx6ul_phytec_boot_state {
+		magic = <0x883b86a6>;
 		compatible = "barebox,state";
 		backend-type = "raw";
-		//backend = <&backend_state_sdhost>;
-		//backend-storage-type = "circular";
-		backend-stridesize = <0x800>;
+		backend = <&backend_update_eeprom>;
+		backend-storage-type = "direct";
+		backend-stridesize = <54>;
+		status = "disabled";
+
 		#address-cells = <1>;
 		#size-cells = <1>;
-
 		bootstate {
 			#address-cells = <1>;
 			#size-cells = <1>;
-			a {
+			last_chosen {
+				reg = <0x0 0x4>;
+				type = "uint32";
+			};
+			system0 {
 				#address-cells = <1>;
 				#size-cells = <1>;
-				remaining_attempts@0 {
-					reg = <0x0 0x4>;
+				remaining_attempts {
+					reg = <0x4 0x4>;
 					type = "uint32";
 					default = <3>;
 				};
-				priority@4 {
-					reg = <0x4 0x4>;
+				priority {
+					reg = <0x8 0x4>;
 					type = "uint32";
 					default = <21>;
 				};
+				ok {
+					reg = <0xc 0x4>;
+					type = "uint32";
+					default = <0>;
+				};
 			};
-
-			b {
+			system1 {
 				#address-cells = <1>;
 				#size-cells = <1>;
-				remaining_attempts@8 {
-					reg = <0x8 0x4>;
+				remaining_attempts {
+					reg = <0x10 0x4>;
 					type = "uint32";
 					default = <3>;
 				};
-				priority@c {
-					reg = <0xc 0x4>;
+				priority {
+					reg = <0x14 0x4>;
 					type = "uint32";
 					default = <20>;
 				};
-			};
-			last_chosen@10 {
-				reg = <0x10 0x4>;
-				type = "uint32";
+				ok {
+					reg = <0x18 0x4>;
+					type = "uint32";
+					default = <0>;
+				};
 			};
 		};
 	};
-
-/*
-	&sdhost {
-		pinctrl-names = "default";
-		pinctrl-0 = <&sdhost_gpio48>;
-		bus-width = <4>;
-		status = "okay";
-		partitions {
-			compatible = "fixed-partitions";
-			#size-cells = <1>;
-			#address-cells = <1>;
-			backend_state_sdhost: part@200000 {
-				label = "state_sdhost";
-				reg = <0x200000 0x200000>;
-			}
-		}
-	};
-*/
 
 	gpio_leds_grisp2: leds {
 		pinctrl-names = "default";
@@ -154,6 +146,18 @@
 /delete-node/ &usbotg2;
 /delete-node/ &fec2;
 #endif /* GRISP_IMX6ULL_Y0 */
+
+&eeprom {
+	partitions {
+		compatible = "fixed-partitions";
+		#size-cells = <1>;
+		#address-cells = <1>;
+		backend_update_eeprom: state@0 {
+			reg = <0x0 0x100>;
+			label = "update-eeprom";
+		};
+	};
+};
 
 &fec1 {
 	status = "okay";
