Add U-Boot var and barebox state in the device tree for testing

--- a/system_grisp2/fwup.conf
+++ b/system_grisp2/fwup.conf
@@ -37,7 +37,11 @@ define(ROOTFS, "${GRISP_TARGET_SYSTEM}/images/rootfs.squashfs")
 # +----------------------------+
 # | BareBox @ offset 1024      |
 # +----------------------------+
-# | BareBox State @ offset ?   |
+# | BareBox Env @ offset ?     |
+# +----------------------------+
+# | U-Boot Env1 @ offset 18432 | ??????
+# +----------------------------+
+# | U-Boot Env2 @ offset 18560 | ??????
 # +----------------------------+
 # | p0: Boot partition (FAT32) |
 # | zImage.a                   |
@@ -49,8 +53,12 @@ define(ROOTFS, "${GRISP_TARGET_SYSTEM}/images/rootfs.squashfs")
 # | p3: Application (f2fs)     |
 # +----------------------------+
 
+# The U-Boot environment is written directly to the SDCard/eMMC
+define(UBOOT_ENV_OFFSET, 18432)
+define(UBOOT_ENV_COUNT, 128)  # 64 KB
+
 # The boot partition contains the zImage files
-define(BOOT_PART_OFFSET, 4096)
+define(BOOT_PART_OFFSET, 20480)
 define(BOOT_PART_COUNT, 28672)
 
 # Let the rootfs have room to grow up to 140 MiB and align it to the nearest 1
@@ -117,6 +125,11 @@ mbr mbr {
         type = 0x83 # Linux
         expand = true
     }
+}
+
+uboot-environment uboot-env {
+    block-offset = ${UBOOT_ENV_OFFSET}
+    block-count = ${UBOOT_ENV_COUNT}
 }
 
 # This firmware task writes everything to the destination media.
