--- a/system_grisp2/linux/imx6ull-grisp2.dts
+++ b/system_grisp2/linux/imx6ull-grisp2.dts
@@ -84,6 +84,30 @@
 		};
 	};
 
+	environment {
+		compatible = "barebox,uboot-environment";
+		device-path-0 = &uboot_env_0;
+		device-path-1 = &uboot_env_1;
+	};
+
+	&usdhc2 {
+		partitions {
+			compatible = "fixed-partitions";
+			#address-cells = <1>;
+			#size-cells = <1>;
+
+			uboot_env_0: partition@900000 {
+				label = "uboot-environment-0";
+				reg = <0x900000 0x10000>;
+			};
+
+			uboot_env_1: partition@910000 {
+				label = "uboot-environment-0";
+				reg = <0x910000 0x10000>;
+			};
+		  };
+	};
+
 	gpio_leds_grisp2: leds {
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_gpioleds_grisp2>;
