Trying to fix the device tree

--- a/system_grisp2/fwup.conf
+++ b/system_grisp2/fwup.conf
@@ -37,11 +37,11 @@ define(ROOTFS, "${GRISP_TARGET_SYSTEM}/images/rootfs.squashfs")
 # +----------------------------+
 # | BareBox @ offset 1024      |
 # +----------------------------+
-# | BareBox Env @ offset ?     |
+# | BareBox Env @ offset 18432 |
 # +----------------------------+
-# | U-Boot Env1 @ offset 18432 | ??????
+# | U-Boot Env1 @ offset 18560 | ??????
 # +----------------------------+
-# | U-Boot Env2 @ offset 18560 | ??????
+# | U-Boot Env2 @ offset 18688 | ??????
 # +----------------------------+
 # | p0: Boot partition (FAT32) |
 # | zImage.a                   |
