Major update of software versions
 - Update Vagrant's ubuntu version to 24.04
 - Modernize vagrant configuration
 - Update toolchain version, and enforce gcc 13
 - Update buildroot version to 2025.05
 - Update OTP version to 28
 - Update Linux kernel to 5.15 for grisp2 system
 - Update Linux kernel header to 5.4
 - Add script to simplify using buildroot menuconfig
 - Rebranded to GRiSP Alloy

--- a/system_common/Config.in
+++ b/system_common/Config.in
@@ -20,9 +20,9 @@ config GRISP_TARGET_NAME
 source "$BR2_EXTERNAL_GRISP_PATH/package/erlinit/Config.in"
 source "$BR2_EXTERNAL_GRISP_PATH/package/nbtty/Config.in"
 source "$BR2_EXTERNAL_GRISP_PATH/package/grisp-config/Config.in"
-source "$BR2_EXTERNAL_GRISP_PATH/package/ply/Config.in"
 source "$BR2_EXTERNAL_GRISP_PATH/package/erlang-rebar3/Config.in"
 source "$BR2_EXTERNAL_GRISP_PATH/package/cryptoauthlib/Config.in"
+source "$BR2_EXTERNAL_GRISP_PATH/package/grisp-updater-tools/Config.in.host"
 
 # Load user options
 menu "User-provided options"
