--- a/toolchain/configs/grisp2_darwin_x86_64_defconfig
+++ b/toolchain/configs/grisp2_darwin_x86_64_defconfig
@@ -1,19 +1,25 @@
-GLB_TOOLCHAIN_VERSION="1.0"
+GLB_TOOLCHAIN_VERSION="3.0"
 GLB_TOOLCHAIN_TYPE=crosstool-ng
 GLB_CTNG_USE_GIT=true
-GLB_CTNG_TAG=4fa0ba100b8924b27942ff253c5474c655427027
+GLB_CTNG_TAG=5595edc370d8146ca3bbb3052dde48aceaff4970
+
+CT_GCC_V_13=y
 
 CT_ARCH_ARM=y
-CT_ARCH_CPU="cortex-a8"
-CT_ARCH_FPU="neon-vfpv3"
+CT_ARCH_CPU="cortex-a7"
+CT_ARCH_FPU="neon-vfpv4"
+CT_ARCH_SUFFIX="v7"
 CT_ARCH_FLOAT_HW=y
 CT_KERNEL_LINUX=y
-CT_LINUX_V_4_14=y
+CT_LINUX_V_5_4=y
 CT_DEBUG_GDB=y
 
-CT_CONFIG_VERSION="3"
+CT_CONFIG_VERSION="4"
 CT_EXTRA_CFLAGS_FOR_BUILD="-I/usr/local/opt/gettext/include"
 CT_EXTRA_LDFLAGS_FOR_BUILD="-L/usr/local/opt/gettext/lib -lintl"
 CT_STATIC_TOOLCHAIN=y
 CT_CC_LANG_CXX=y
 CT_TARBALLS_BUILDROOT_LAYOUT=y
+CT_CC_GCC_LIBGOMP=y
+CT_CC_GCC_BUILD_ID=y
+CT_CC_LANG_FORTRAN=y
