--- a/samples/hello_grisp/rebar.config
+++ b/samples/hello_grisp/rebar.config
@@ -21,6 +21,7 @@
 		inets,
 		crypto
 	]},
+	{include_erts, true},
 	{sys_config, "./config/sys.config"},
 	{vm_args, "./config/vm.args"},
 	{extended_start_script, true}
