--- a/system_grisp2/rootfs_overlay/etc/erlinit.config
+++ b/system_grisp2/rootfs_overlay/etc/erlinit.config
@@ -15,6 +15,13 @@
 # Use nbtty to improve terminal handling on serial ports.
 -s "/usr/bin/nbtty"
 
+# There's a call to getrandom(2) when loading the crypto NIF that's before
+# nerves_runtime can start rngd. This syscall can block the BEAM indefinitely
+# if there's not enough entropy in the kernel. We have not observed blocking on
+# this platform. However, we don't know that getrandom(2) will always have
+# enough entropy, so start rngd here to be safe.
+--pre-run-exec /usr/sbin/rngd
+
 # Specify the user and group IDs for the Erlang VM
 #--uid 100
 #--gid 200
@@ -37,7 +44,10 @@
 #--run-on-exit /bin/sh
 
 # Enable UTF-8 filename handling in Erlang and custom inet configuration
--e LANG=en_US.UTF-8;LANGUAGE=en;ERL_INETRC=/etc/erl_inetrc;ERL_CRASH_DUMP=/root/crash.dump
+-e LANG=en_US.UTF-8;LANGUAGE=en;ERL_INETRC=/etc/erl_inetrc
+
+# Enable crash dumps (set ERL_CRASH_DUMP_SECONDS=0 to disable)
+-e ERL_CRASH_DUMP=/root/erl_crash.dump;ERL_CRASH_DUMP_SECONDS=5
 
 # Mount the application partition (run "man fstab" for field names)
 # NOTE: This must match the location in the fwup.conf. If it doesn't the system
@@ -47,7 +57,7 @@
 #       grisp_runtime will auto-format it. Your applications will need to handle
 #       initializing any expected files and folders.
 -m /dev/mmcblk0p1:/mnt/boot:vfat:ro,nodev,noexec,nosuid:
--m /dev/mmcblk0p4:/root:f2fs:nodev:
+# -m /dev/mmcblk0p4:/root:f2fs:nodev:
 -m tmpfs:/sys/fs/cgroup:tmpfs:nodev,noexec,nosuid:mode=755,size=1024k
 
 # Erlang release search path
@@ -55,5 +65,5 @@
 
 # Assign a hostname of the form "grisp-<serial_number>".
 # See /etc/boardid.config for locating the serial number.
--d /usr/bin/boardid
+#-d /usr/bin/boardid
 -n grisp-%s
