Fix uboot setup for Kontron AL/BL iMX8M Mini system

--- a/system_kontron-albl-imx8mm/fwup.conf
+++ b/system_kontron-albl-imx8mm/fwup.conf
@@ -1,6 +1,4 @@
-# WIP
-
-# Firmware configuration file for Kontron i.MX8MM on Linux
+# Firmware configuration file for Kontron AL/BL i.MX8M Mini on Linux
 
 require-fwup-version="1.0.0"
 
@@ -13,7 +11,6 @@ require-fwup-version="1.0.0"
 #  Run 'fwup -m' to query values in a .fw file.
 #  Use 'fw_printenv' to query values on the target.
 #
-# These are used by Grisp libraries to introspect.
 define(GRISP_FW_PRODUCT, "Kontron AL/BL i.MX8M Mini Firmware")
 define(GRISP_FW_DESCRIPTION, "")
 define(GRISP_FW_VERSION, "")
@@ -22,16 +19,12 @@ define(GRISP_FW_ARCHITECTURE, "aarch64-unknown-linux-gnu")
 define(GRISP_FW_AUTHOR, "Peer Stritzinger GmbH")
 define(GRISP_FW_VCS_IDENTIFIER, "")
 
-define(GRISP_FW_DEVPATH, "/dev/mmcblk1")
-define(GRISP_FW_APPLICATION_PART0_DEVPATH, "/dev/mmcblk1p4") # Linux part number is 1-based
-define(GRISP_FW_APPLICATION_PART0_FSTYPE, "f2fs")
-define(GRISP_FW_APPLICATION_PART0_TARGET, "/root")
-#define(GRISP_PROVISIONING, "${GRISP_TARGET_SYSTEM}/images/fwup_include/provisioning.conf")
-
 # Default paths if not specified via the commandline
 define(ROOTFS, "${GRISP_TARGET_SYSTEM}/images/rootfs.squashfs")
 define(UBOOT, "${GRISP_SYSTEM}/images/flash.bin")
 define(FITIMAGE, "${GRISP_SYSTEM}/images/fitImage")
+define(PRIMARY_ENV_BIN, "${GRISP_SYSTEM}/images/uboot-env.bin")
+define(SECONDARY_ENV_BIN, "${GRISP_SYSTEM}/images/uboot-env.bin")
 
 # This configuration file will create an image that
 # has an MBR and the following layout:
@@ -96,9 +89,18 @@ file-resource uboot {
     host-path = ${UBOOT}
 }
 
+file-resource primary-uboot-env {
+    host-path = ${PRIMARY_ENV_BIN}
+}
+
+file-resource secondary-uboot-env {
+    host-path = ${SECONDARY_ENV_BIN}
+}
+
 file-resource fitImage {
     host-path = ${FITIMAGE}
 }
+
 file-resource rootfs.img {
     host-path = ${ROOTFS}
 
@@ -131,7 +133,7 @@ mbr mbr {
     }
 }
 
-uboot-environment uboot_env {
+uboot-environment uboot-env {
     block-offset = ${UBOOT_ENV_PRIMARY_OFFSET}
     block-offset-redund = ${UBOOT_ENV_SECONDARY_OFFSET}
     block-count = ${UBOOT_ENV_COUNT}
@@ -144,41 +146,65 @@ task complete {
     require-unmounted-destination = true
 
     on-init {
-        info("Creating bootable eMMC image for Kontron i.MX8MM")
+        info("Initializing Kontron AL/BL i.MX8M Mini eMMC")
         mbr_write(mbr)
 
         fat_mkfs(${BOOT_PART_OFFSET}, ${BOOT_PART_COUNT})
         fat_setlabel(${BOOT_PART_OFFSET}, "BOOT")
 
-        # Initialize U-Boot environment for A/B boot
-        uboot_clearenv(uboot_env)
-        uboot_setenv(uboot_env, "active_part", "a")
-        uboot_setenv(uboot_env, "upgrade_available", "0")
-        uboot_setenv(uboot_env, "bootcount", "0")
-        uboot_setenv(uboot_env, "image_base", "fitImage")
-
-        # Kernel parameters with single CPU RT isolation
-        # CPU 3 isolated for RT, CPUs 0-2 available for normal system tasks
-        uboot_setenv(uboot_env, "bootargs_base", "rootwait console=ttymxc2,115200 isolcpus=3 nohz_full=3 rcu_nocbs=3 rcu_nocb_poll intel_idle.max_cstate=1 processor.max_cstate=1")
+        uboot_clearenv(uboot-env)
     }
 
     on-resource uboot {
+        info("Writing U-Boot bootloader")
         # Write U-Boot at 33KB offset (no partition table)
         raw_write(${UBOOT_OFFSET})
     }
 
+    on-resource primary-uboot-env {
+        info("Writing U-Boot main environment")
+        raw_write(${UBOOT_ENV_PRIMARY_OFFSET})
+    }
+
+    on-resource secondary-uboot-env {
+        info("Writing U-Boot redundant environment")
+        raw_write(${UBOOT_ENV_SECONDARY_OFFSET})
+
+        info("Customising U-Boot environment")
+
+        # Override/customize specific variables for factory initialization
+        uboot_setenv(uboot-env, "valid_system", "a")
+        uboot_setenv(uboot-env, "active_system", "a")
+        uboot_setenv(uboot-env, "update_available", "0")
+        uboot_setenv(uboot-env, "update_fallback", "0")
+
+        # Initialize system A metadata
+        uboot_setenv(uboot-env, "systema_firmware_uuid", "\${FWUP_META_UUID}")
+        uboot_setenv(uboot-env, "systema_firmware_version", ${GRISP_FW_VERSION})
+        uboot_setenv(uboot-env, "systema_firmware_vcs_id", ${GRISP_FW_VCS_IDENTIFIER})
+        uboot_setenv(uboot-env, "systema_firmware_author", ${GRISP_FW_AUTHOR})
+
+        # Add extra kernel parameters for RT isolation
+        # CPU 3 isolated for RT, CPUs 0-2 available for normal system tasks
+        uboot_setenv(uboot-env, "bootargs_extra", "isolcpus=3 nohz_full=3 rcu_nocbs=3 rcu_nocb_poll intel_idle.max_cstate=1 processor.max_cstate=1")
+    }
+
     on-resource fitImage {
-        # Write initial fitImage to both A and B slots
+        info("Writing FIT image")
+        # Write initial fitImage for system A
         fat_write(${BOOT_PART_OFFSET}, "fitImage_A")
-        fat_cp(${BOOT_PART_OFFSET}, "fitImage_A", "fitImage_B")
+        # Cleanup any old system B image
+        fat_rm(${BOOT_PART_OFFSET}, "fitImage_B")
     }
 
     on-resource rootfs.img {
+        info("Writing root filesystem to partition A")
         # write to the first rootfs partition
         raw_write(${ROOTFS_A_PART_OFFSET})
     }
 
     on-finish {
+        info("Finalizing eMMC firmware")
         # Clear out any old data in the B partition that might be mistaken for
         # a file system. This is mostly to avoid confusion in humans when
         # reprogramming SDCards with unknown contents.
@@ -189,6 +215,8 @@ task complete {
         # formatted. If this isn't done and an old SDCard is reused, the
         # application data could be in a weird state.
         raw_memset(${APP_PART_OFFSET}, 256, 0xff)
+
+        info("eMMC setup done")
     }
 }
 
@@ -199,7 +227,7 @@ task sdcard {
     require-unmounted-destination = true
 
     on-init {
-        info("Creating bootable SD card for Kontron i.MX8MM")
+        info("Creating bootable SD card for Kontron AL/BL i.MX8M Mini")
 
         # Write partition table
         mbr_write(mbr)
@@ -208,23 +236,7 @@ task sdcard {
         fat_mkfs(${BOOT_PART_OFFSET}, ${BOOT_PART_COUNT})
         fat_setlabel(${BOOT_PART_OFFSET}, "BOOT")
 
-        # Initialize U-Boot environment for first boot
-        uboot_clearenv(uboot_env)
-        uboot_setenv(uboot_env, "active_part", "a")
-        uboot_setenv(uboot_env, "upgrade_available", "0")
-        uboot_setenv(uboot_env, "bootcount", "0")
-        uboot_setenv(uboot_env, "image_base", "fitImage")
-
-        # Kernel parameters with single CPU RT isolation
-        # CPU 3 isolated for RT, CPUs 0-2 available for normal system tasks
-        # This follows meta-ked-bsp pattern where bootargs_base contains the core parameters
-        # that get combined with root= device path during boot
-        uboot_setenv(uboot_env, "bootargs_base", "rootwait console=ttymxc2,115200 isolcpus=3 nohz_full=3 rcu_nocbs=3 rcu_nocb_poll intel_idle.max_cstate=1 processor.max_cstate=1")
-
-        # Additional environment variables for SD card boot
-        uboot_setenv(uboot_env, "bootdelay", "3")
-        uboot_setenv(uboot_env, "vendor_boot_targets", "mmc0 mmc1")
-        uboot_setenv(uboot_env, "bootcmd", "run vendor_bootcmd")
+        uboot_clearenv(uboot-env)
     }
 
     on-resource uboot {
@@ -233,10 +245,41 @@ task sdcard {
         raw_write(${UBOOT_OFFSET})
     }
 
+    on-resource primary-uboot-env {
+        info("Writing U-Boot main environment")
+        raw_write(${UBOOT_ENV_PRIMARY_OFFSET})
+    }
+
+    on-resource secondary-uboot-env {
+        info("Writing U-Boot redundant environment")
+        raw_write(${UBOOT_ENV_SECONDARY_OFFSET})
+
+        info("Customising U-Boot environment")
+
+        # Override/customize specific variables for factory initialization
+        uboot_setenv(uboot-env, "valid_system", "a")
+        uboot_setenv(uboot-env, "active_system", "a")
+        uboot_setenv(uboot-env, "update_available", "0")
+        uboot_setenv(uboot-env, "update_fallback", "0")
+
+        # Initialize system A metadata
+        uboot_setenv(uboot-env, "systema_firmware_uuid", "\${FWUP_META_UUID}")
+        uboot_setenv(uboot-env, "systema_firmware_version", ${GRISP_FW_VERSION})
+        uboot_setenv(uboot-env, "systema_firmware_vcs_id", ${GRISP_FW_VCS_IDENTIFIER})
+        uboot_setenv(uboot-env, "systema_firmware_author", ${GRISP_FW_AUTHOR})
+
+        # Add extra kernel parameters for RT isolation
+        # CPU 3 isolated for RT, CPUs 0-2 available for normal system tasks
+        uboot_setenv(uboot-env, "bootargs_extra", "isolcpus=3 nohz_full=3 rcu_nocbs=3 rcu_nocb_poll intel_idle.max_cstate=1 processor.max_cstate=1")
+
+        # Additional environment variables for SD card boot
+        uboot_setenv(uboot-env, "bootdelay", "3")
+    }
+
     on-resource fitImage {
         info("Writing FIT image")
         # Write fitImage to A slot only
-        fat_write(${BOOT_PART_OFFSET}, "fitImage_A")
+        fat_write(${BOOT_PART_OFFSET}, "fitImage")
     }
 
     on-resource rootfs.img {
@@ -253,24 +296,34 @@ task sdcard {
         # The actual formatting will be done by the system on first boot
         raw_memset(${APP_PART_OFFSET}, 256, 0xff)
 
-        info("SD card creation complete")
-        info("Device path: ${GRISP_FW_DEVPATH}")
-        info("Active partition: A (/dev/mmcblk1p2)")
-        info("Boot from: fitImage_A")
+        info("SD card setup done")
     }
 }
 
-# This firmware task upgrades when partition B is currently active
-task upgrade.a {
+# This firmware task updates system A when system B is currently active
+task update.a {
+    # Verify we are running from system B
+    require-partition-offset(1, ${ROOTFS_B_PART_OFFSET})
+
     # Verify that partition B is currently active
-    require-uboot-variable(uboot_env, "active_part", "b")
+    require-uboot-variable(uboot-env, "active_system", "b")
+
+    # Verify the expected platform/architecture
+    require-uboot-variable(uboot-env, "system_platform", "${GRISP_FW_PLATFORM}")
+    require-uboot-variable(uboot-env, "system_architecture", "${GRISP_FW_ARCHITECTURE}")
 
     # Upgrade to partition A
     on-init {
-        info("Upgrading partition A (currently running from B)")
+        info("Upgrading system A (currently running from B)")
 
-        # Set that an upgrade is available
-        uboot_setenv(uboot_env, "upgrade_available", "1")
+        # Any already updated system will be destroyed
+        uboot_setenv(uboot-env, "update_available", "0")
+
+        # Override system A metadata
+        uboot_setenv(uboot-env, "systema_firmware_uuid", "\${FWUP_META_UUID}")
+        uboot_setenv(uboot-env, "systema_firmware_version", ${GRISP_FW_VERSION})
+        uboot_setenv(uboot-env, "systema_firmware_vcs_id", ${GRISP_FW_VCS_IDENTIFIER})
+        uboot_setenv(uboot-env, "systema_firmware_author", ${GRISP_FW_AUTHOR})
 
         # Indicate that the entire partition can be cleared
         trim(${ROOTFS_A_PART_OFFSET}, ${ROOTFS_A_PART_COUNT})
@@ -288,27 +341,38 @@ task upgrade.a {
     }
 
     on-finish {
-        # Switch to partition A on next boot
-        uboot_setenv(uboot_env, "active_part", "a")
+        uboot_setenv(uboot-env, "update_available", "1")
+        info("System A updated")
     }
 
     on-error {
-        # Reset upgrade flag on error
-        uboot_setenv(uboot_env, "upgrade_available", "0")
     }
 }
 
-# This firmware task upgrades when partition A is currently active
-task upgrade.b {
+# This firmware task updates system B when system A is currently active
+task update.b {
+    # Verify we are running from system A
+    require-partition-offset(1, ${ROOTFS_A_PART_OFFSET})
+
     # Verify that partition A is currently active
-    require-uboot-variable(uboot_env, "active_part", "a")
+    require-uboot-variable(uboot-env, "active_system", "a")
+
+    # Verify the expected platform/architecture
+    require-uboot-variable(uboot-env, "system_platform", "${GRISP_FW_PLATFORM}")
+    require-uboot-variable(uboot-env, "system_architecture", "${GRISP_FW_ARCHITECTURE}")
 
     # Upgrade to partition B
     on-init {
-        info("Upgrading partition B (currently running from A)")
+        info("Upgrading system B (currently running from A)")
 
-        # Set that an upgrade is available
-        uboot_setenv(uboot_env, "upgrade_available", "1")
+        # Any already updated system will be destroyed
+        uboot_setenv(uboot-env, "update_available", "0")
+
+        # Override system B metadata
+        uboot_setenv(uboot-env, "systemb_firmware_uuid", "\${FWUP_META_UUID}")
+        uboot_setenv(uboot-env, "systemb_firmware_version", ${GRISP_FW_VERSION})
+        uboot_setenv(uboot-env, "systemb_firmware_vcs_id", ${GRISP_FW_VCS_IDENTIFIER})
+        uboot_setenv(uboot-env, "systemb_firmware_author", ${GRISP_FW_AUTHOR})
 
         # Indicate that the entire partition can be cleared
         trim(${ROOTFS_B_PART_OFFSET}, ${ROOTFS_B_PART_COUNT})
@@ -326,22 +390,26 @@ task upgrade.b {
     }
 
     on-finish {
-        # Switch to partition B on next boot
-        uboot_setenv(uboot_env, "active_part", "b")
+        uboot_setenv(uboot-env, "update_available", "1")
+        info("System B updated")
     }
 
     on-error {
-        # Reset upgrade flag on error
-        uboot_setenv(uboot_env, "upgrade_available", "0")
     }
 }
 
 # This task handles unexpected active partition states
-task upgrade.unexpected {
-    # This task runs when active_part is not "a" or "b"
+task update.unexpected {
+    require-uboot-variable(uboot-env, "system_platform", "${GRISP_FW_PLATFORM}")
+    require-uboot-variable(uboot-env, "system_architecture", "${GRISP_FW_ARCHITECTURE}")
     on-init {
-        error("Unexpected active partition: ${FWUP_TASK}")
-        error("Expected active_part to be 'a' or 'b'")
-        error("Please check the U-Boot environment and try again")
+         error("It doesn't look like either the A or B systems are active.")
+    }
+}
+
+# This task handles platform/architecture mismatches
+task update.wrongplatform {
+    on-init {
+        error("Expecting platform=${GRISP_FW_PLATFORM} and architecture=${GRISP_FW_ARCHITECTURE}")
     }
 }
