--- a/system_kontron-albl-imx8mm/rootfs_overlay/etc/erlinit.config
+++ b/system_kontron-albl-imx8mm/rootfs_overlay/etc/erlinit.config
@@ -3,10 +3,8 @@
 # Turn on the debug prints
 #-v
 
-# Specify where erlinit should send the Erlang prompt. Only one may be enabled
-# at a time.
--c ttymxc0   # Debug UART connector
-#-c ttymxc4   # UART connector on main board
+# Specify where erlinit should send the Erlang prompt
+-c ttymxc2   # Debug console
 
 # If more than one tty are available, always warn if the user is looking at the
 # wrong one.
@@ -56,8 +54,8 @@
 #       the history is loaded. If this mount fails due to corruption, etc.,
 #       grisp_runtime will auto-format it. Your applications will need to handle
 #       initializing any expected files and folders.
--m /dev/mmcblk0p1:/mnt/boot:vfat:ro,nodev,noexec,nosuid:
-# -m /dev/mmcblk0p4:/root:f2fs:nodev:
+-m /dev/rootdisk0p1:/mnt/boot:vfat:ro,nodev,noexec,nosuid:
+# -m /dev/rootdisk0p4:/root:f2fs:nodev:
 -m tmpfs:/sys/fs/cgroup:tmpfs:nodev,noexec,nosuid:mode=755,size=1024k
 
 # Erlang release search path
