--- a/system_kontron-albl-imx8mm/rootfs_overlay/etc/fw_env.config
+++ b/system_kontron-albl-imx8mm/rootfs_overlay/etc/fw_env.config
@@ -1,6 +1,5 @@
-# fw_printenv and fw_setenv configuration
-#
-# See fwup.conf for offset and size
+# fw_printenv and fw_setenv configuration for Kontron AL/BL i.MX8M Mini
 
-# Device name	Device offset	Env. size	Flash sector size	Number of sectors
-/dev/mmcblk0	0x100000	0x20000		0x200			256
+# Device        Offset      Size
+/dev/rootdisk0	0x1E0000	0x10000
+/dev/rootdisk0	0x1F0000	0x10000
