Fix support for A/B software update

--- a/system_kontron-albl-imx8mm/uboot/uboot.env
+++ b/system_kontron-albl-imx8mm/uboot/uboot.env
@@ -18,32 +18,31 @@ altbootcmd=run alloy_fallback;
 
 # Alloy custom environment variables
 image_base=fitImage
-#bootargs_base=rootwait console=ttymxc2,115200 mtdparts=spi0.0:0x50000(spl),0x100000(u-boot),0x10000(env),0x10000(env_redundant)
 bootargs_base=rootwait console=ttymxc2,115200
 bootargs_extra=
 alloy_boot_order=mmc1 mmc0
 
-# A/B software update context
+# A/B software upgrade context
 # Last known working system (a|b)
 valid_system=a
 # Currently booted system (a|b)
 active_system=a
-# New update ready to install (0|1)
-update_available=0
+# New upgrade ready to install (0|1)
+upgrade_available=0
 # Fallback attempt counter
-update_fallback=0
+upgrade_fallback=0
 
 # Firmware general information
 system_platform=kontron-albl-imx8mm
 system_architecture=aarch64-unknown-linux-gnu
 
-# System A metadata, set during the update process
+# System A metadata, set during the upgrade process
 systema_firmware_uuid=""
 systema_firmware_version=""
 systema_firmware_vcs_id=""
 systema_firmware_author=""
 
-# System B metadata, set during the update process
+# System B metadata, set during the upgrade process
 systemb_firmware_uuid=""
 systemb_firmware_version=""
 systemb_firmware_vcs_id=""
@@ -52,8 +51,8 @@ systemb_firmware_author=""
 # Custom commands
 
 alloy_fallback=\
-	setexpr update_fallback ${update_fallback} + 1;\
-	setenv update_available 0;\
+	setexpr upgrade_fallback ${upgrade_fallback} + 1;\
+	setenv upgrade_available 0;\
 	run alloy_bootcmd;
 
 alloy_bootcmd=\
@@ -62,7 +61,7 @@ alloy_bootcmd=\
 	done;\
 	reset;
 
-# Boot from eMMC with A/B software update
+# Boot from eMMC with A/B software upgrade
 alloy_bootcmd_mmc0=\
 	devnum=0;\
 	devpart=2;\
@@ -76,14 +75,15 @@ alloy_bootcmd_mmc1=\
 
 alloy_boot_simple=\
 	setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.boot_id=sd-card;\
+	saveenv\
 	if load mmc ${devnum}:${devpart} ${loadaddr} ${image_base}; then\
 		bootm ${loadaddr};\
 	fi;
 
-# A/B boot logic - handles normal boot, updates, and fallbacks
-# TODO: Enable watchdog before calling bootm when update validation client is implemented
+# A/B boot logic - handles normal boot, upgrades, and fallbacks
+# TODO: Enable watchdog before calling bootm when upgrade validation client is implemented
 # This will auto-reboot if new system doesn't mark itself as working
-#		if test ${update_available} = 1; then
+#		if test ${upgrade_available} = 1; then
 #			wdt dev watchdog@30280000;
 #			wdt start 15000;
 #		fi;
@@ -92,54 +92,55 @@ alloy_boot_ab=\
 		echo "WARNING: Invalid valid_system='${valid_system}', defaulting to 'a'";\
 		setenv valid_system a;\
 	fi;\
-	if test ${update_available} -lt 0 || test ${update_available} -gt 1; then\
-		echo "WARNING: Invalid update_available=${update_available}, defaulting to 0";\
-		setenv update_available 0;\
+	if test ${upgrade_available} -lt 0 || test ${upgrade_available} -gt 1; then\
+		echo "WARNING: Invalid upgrade_available=${upgrade_available}, defaulting to 0";\
+		setenv upgrade_available 0;\
 	fi;\
-	if test ${update_fallback} -lt 0; then\
-		echo "WARNING: Invalid update_fallback=${update_fallback}, defaulting to 0";\
-		setenv update_fallback 0;\
+	if test ${upgrade_fallback} -lt 0; then\
+		echo "WARNING: Invalid upgrade_fallback=${upgrade_fallback}, defaulting to 0";\
+		setenv upgrade_fallback 0;\
 	fi;\
-	if test ${valid_system} = a && test ${update_available} = 0 && test ${update_fallback} = 0; then\
+	if test ${valid_system} = a && test ${upgrade_available} = 0 && test ${upgrade_fallback} = 0; then\
 		setenv active_system a;\
 		setenv image ${image_base}_A;\
 		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.boot_id=system-a;\
 		echo Booting system A: /dev/mmcblk${devnum}p3;\
-	elif test ${valid_system} = b && test ${update_available} = 0 && test ${update_fallback} = 0; then\
+	elif test ${valid_system} = b && test ${upgrade_available} = 0 && test ${upgrade_fallback} = 0; then\
 		setenv active_system b;\
 		setenv image ${image_base}_B;\
 		setenv bootargs root=/dev/mmcblk${devnum}p4 ${bootargs_base} ${bootargs_extra} alloy.boot_id=system-b;\
 		echo Booting system B: /dev/mmcblk${devnum}p4;\
-	elif test ${valid_system} = a && test ${update_fallback} -gt 0; then\
+	elif test ${valid_system} = a && test ${upgrade_fallback} -gt 0; then\
 		setenv active_system a;\
 		setenv image ${image_base}_A;\
 		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra}  alloy.boot_id=system-a fallback;\
 		echo Falling back to system A: /dev/mmcblk${devnum}p3;\
-	elif test ${valid_system} = b && test ${update_fallback} -gt 0; then\
+	elif test ${valid_system} = b && test ${upgrade_fallback} -gt 0; then\
 		setenv active_system b;\
 		setenv image ${image_base}_B;\
 		setenv bootargs root=/dev/mmcblk${devnum}p4 ${bootargs_base} alloy.boot_id=system-b fallback;\
 		echo Falling back to system B: /dev/mmcblk${devnum}p4;\
-	elif test ${valid_system} = a && test ${update_available} = 1; then\
+	elif test ${valid_system} = a && test ${upgrade_available} = 1; then\
 		setenv active_system b;\
 		setenv image ${image_base}_B;\
 		setenv bootargs root=/dev/mmcblk${devnum}p4 ${bootargs_base} ${bootargs_extra} alloy.boot_id=system-b alloy.upgrading=true;\
 		echo Upgrading to system B: /dev/mmcblk${devnum}p4;\
-	elif test ${valid_system} = b && test ${update_available} = 1; then\
+	elif test ${valid_system} = b && test ${upgrade_available} = 1; then\
 		setenv active_system a;\
 		setenv image ${image_base}_A;\
 		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.boot_id=system-a alloy.upgrading=true;\
 		echo Upgrading to system A: /dev/mmcblk${devnum}p3;\
 	else\
-		echo "FATAL: Unexpected system update context";\
+		echo "FATAL: Unexpected system upgrade context";\
 		echo "  valid_system=${valid_system}";\
-		echo "  update_available=${update_available}";\
-		echo "  update_fallback=${update_fallback}";\
+		echo "  upgrade_available=${upgrade_available}";\
+		echo "  upgrade_fallback=${upgrade_fallback}";\
 		setenv active_system a;\
 		setenv image ${image_base}_A;\
 		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base} ${bootargs_extra} alloy.boot_id=system-a recovery;\
 		echo "Emergency boot to system A: /dev/mmcblk${devnum}p3";\
 	fi\
+	saveenv\
 	if load mmc ${devnum}:${devpart} ${loadaddr} ${image}; then\
 		bootm ${loadaddr};\
 	else\
