--- a/system_grisp2/rootfs_overlay/etc/erlinit.config
+++ b/system_grisp2/rootfs_overlay/etc/erlinit.config
@@ -63,6 +63,9 @@
 # Erlang release search path
 -r /srv/erlang
 
+# Boot the application
+--boot start
+
 # Assign a hostname of the form "grisp-<serial_number>".
 # See /etc/boardid.config for locating the serial number.
 #-d /usr/bin/boardid
