--- a/system_kontron-albl-imx8mm/rootfs_overlay/etc/erlinit.config
+++ b/system_kontron-albl-imx8mm/rootfs_overlay/etc/erlinit.config
@@ -61,6 +61,9 @@
 # Erlang release search path
 -r /srv/erlang
 
+# Boot the application
+--boot start
+
 # Assign a hostname of the form "grisp-<serial_number>".
 # See /etc/boardid.config for locating the serial number.
 #-d /usr/bin/boardid
