--- a/system_kontron-albl-imx8mm/rootfs_overlay/etc/erlinit.config
+++ b/system_kontron-albl-imx8mm/rootfs_overlay/etc/erlinit.config
@@ -45,7 +45,7 @@
 -e LANG=en_US.UTF-8;LANGUAGE=en;ERL_INETRC=/etc/erl_inetrc
 
 # Enable crash dumps (set ERL_CRASH_DUMP_SECONDS=0 to disable)
--e ERL_CRASH_DUMP=/root/erl_crash.dump;ERL_CRASH_DUMP_SECONDS=5
+-e ERL_CRASH_DUMP=/data/crash/erl_crash.dump;ERL_CRASH_DUMP_SECONDS=5
 
 # Mount the application partition (run "man fstab" for field names)
 # NOTE: This must match the location in the fwup.conf. If it doesn't the system
@@ -54,9 +54,11 @@
 #       the history is loaded. If this mount fails due to corruption, etc.,
 #       grisp_runtime will auto-format it. Your applications will need to handle
 #       initializing any expected files and folders.
--m /dev/rootdisk0p1:/mnt/boot:vfat:ro,nodev,noexec,nosuid:
-# -m /dev/rootdisk0p4:/root:f2fs:nodev:
--m tmpfs:/sys/fs/cgroup:tmpfs:nodev,noexec,nosuid:mode=755,size=1024k
+-m /dev/rootdisk0p1:/boot:vfat:ro,nodev,noexec,nosuid:
+-m tmpfs:/root:tmpfs::mode=0700,size=1M
+-m tmpfs:/var/log:tmpfs:nodev,noexec,nosuid:mode=0755,size=16M
+
+--pre-run-exec "/sbin/early-init.sh"
 
 # Erlang release search path
 -r /srv/erlang
