Split project package building out of firmware building

--- a/samples/hello_grisp/rebar.config
+++ b/samples/hello_grisp/rebar.config
@@ -24,7 +24,8 @@
 	{include_erts, true},
 	{sys_config, "./config/sys.config"},
 	{vm_args, "./config/vm.args"},
-	{extended_start_script, true}
+	{extended_start_script, true},
+	{include_src, false}
 	%{overlay_vars, "vars.config"},
 	%{overlay, []}
 ]}.
