--- a/system_kontron-albl-imx8mm/rootfs_overlay/etc/erlinit.config
+++ b/system_kontron-albl-imx8mm/rootfs_overlay/etc/erlinit.config
@@ -54,11 +54,11 @@
 #       the history is loaded. If this mount fails due to corruption, etc.,
 #       grisp_runtime will auto-format it. Your applications will need to handle
 #       initializing any expected files and folders.
--m /dev/rootdisk0p1:/boot:vfat:ro,nodev,noexec,nosuid:
+-m /dev/rootdisk0p2:/boot:vfat:ro,nodev,noexec,nosuid:
 -m tmpfs:/root:tmpfs::mode=0700,size=1M
 -m tmpfs:/var/log:tmpfs:nodev,noexec,nosuid:mode=0755,size=16M
 
---pre-run-exec "/sbin/early-init.sh"
+--pre-run-exec "/sbin/early-init.sh /dev/rootdisk0p5"
 
 # Erlang release search path
 -r /srv/erlang
